# mypackage

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
mypackage/: __init__.py  utils.py
mypackage/geometry/: __init__.py
test/: test_distance.py  test_divide.py
